MB-42635: Fix too long error string in XDCR page
Reviewed-on: http://review.couchbase.org/c/ns_server/+/143265
Well-Formed: Build Bot <build@couchbase.com>
Tested-by: Pavel Blagodov <stochmail@gmail.com>

--- a/priv/public/ui/app/css/cbui-layout.css
+++ b/priv/public/ui/app/css/cbui-layout.css
@@ -629,6 +629,9 @@ footer {
 .break-word {
   word-break: break-all;
 }
+.overflow-wrap {
+  overflow-wrap: anywhere
+}
 .debug-outline {
   border: 1px dashed red !important;
 }
